# dataexp

./: .gitignore  README.md  STREAMLIT_GUIDE.md  app.py  app_original.py  example_dataframe_storage.py  pyproject.toml  report.md  report_japanese.md  run_app.py
knowledge/: user_preference.txt
src/dataexp/: crew.py  main.py  temp\output.json  test_tool.py
src/dataexp/config/: agents.yaml  tasks.yaml
src/dataexp/tools/: __init__.py  data_tool.py
