[project]
name = "dataexp"
version = "0.1.0"
description = "dataexp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
dataexp = "dataexp.main:run"
run_crew = "dataexp.main:run"
train = "dataexp.main:train"
replay = "dataexp.main:replay"
test = "dataexp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
