[project]
name = "dataexp"
version = "0.1.0"
description = "dataexp using crewAI"
authors = [{ name = "Heng Chee Kiang", email = "ckheng@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "pandasql>=0.7.3",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]

[project.scripts]
dataexp = "dataexp.main:run"
run_crew = "dataexp.main:run"
train = "dataexp.main:train"
replay = "dataexp.main:replay"
test = "dataexp.main:test"
streamlit_app = "dataexp.main:run_streamlit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
